tests/cli/snapshots/cli__manage__manage_invalid_config.snap
---
source: tests/cli/manage.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Invalid gherritManaged value: bad-value. Expected managedPublic, managedPrivate, or false.
