tests/cli/snapshots/cli__manage__manage_toggle_switch_private.snap
---
source: tests/cli/manage.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch visibility-feature is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will sync PRs only, but will not push visibility-feature itself.
