tests/cli/snapshots/cli__manage__unmanage_cleanup.snap
---
source: tests/cli/manage.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-cleanup is now unmanaged by GHerrit.
